Creando página de Error Móvil

--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -5,13 +5,39 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <title>Save The King</title>
+        <link rel="icon" type="image/x-icon" href="media/img/favicon.ico">
 
+        <link href="resources/css/mobileStyles.css" type="text/css" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
-        <meta name="description" content="">
+        <meta name="description" content="Save the King Game disponible para PC y Mac">
     </head>
 
     <body>
-        <h1>MOBILE</h1>
-        <h2>Holaaaaa</h2>
+        <div id="landing">
+            <img src="resources/img/logoFinal.png" alt="Logo Save The King" width="300px">
+
+            <div id="icons">
+                <i class="fa-solid fa-mobile-screen-button"></i>
+                <i class="fa-solid fa-arrow-right"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-laptop"></i>
+            </div>
+            
+            <h1>Save the King</h1>
+            <h2>Lo sentimos! No nos da la vida para hacer el juego en móvil</h2><i class="fa-regular fa-face-grin-beam-sweat"></i>
+            <h2>Levanta del sofá y vete a por el portátil que el juego lo vale!</h2>
+        </div>
+
+        <div id="info">
+            <h2>DESARROLLADO POR</h2>
+            <h2>JAVIER IREGUI</h2>
+            <h2>FÉLIX HERNÁNDEZ</h2>
+        </div>
+    
+        <a id="instaLink" href="https://www.instagram.com/savetheking_game/">
+            <i id="insta" class="fa-brands fa-instagram"></i>
+        </a>
     </body>
 </html>
