--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -1,7 +1,7 @@
 /* TIPOGRAFÍAS */
 @font-face {
     font-family: texto;
-    src: url(../media/fonts/Insanibc.woff);
+    src: url(../fonts/Insanibc.woff);
 }
 
 /* DOCUMENTO */
@@ -16,4 +16,21 @@
 }
 html{
     background-color: #57326b;
+    overflow: hidden;
+}
+#landing{
+    background-image: url('../img/fondo1.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#landing > img{
+    height: 35%;
+    margin-bottom: 5%;
 }
