--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -29,8 +29,36 @@ html{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: white;
 }
 #landing > img{
-    height: 35%;
+    height: 40%;
     margin-bottom: 5%;
+}
+
+
+
+
+/* CRÉDITOS */
+#info{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 25px;
+    color: white;
+}
+#info > h2{
+    font-size: 12px;
+}
+/* INSTAGRAM */
+#instaLink{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 25px 25px;
+    color: white;
+}
+#insta{
+    font-size: 24px;
+    color: white;
 }
