--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -28,7 +28,7 @@ html{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     color: white;
 }
 #landing > img{
@@ -50,6 +50,7 @@ h1{
 }
 #landing > i{
     font-size: 32px;
+    margin: 5% 0px;
 }
 
 
@@ -60,7 +61,7 @@ h1{
     position: absolute;
     bottom: 0;
     right: 0;
-    margin: 25px;
+    margin: 15px 25px;
     color: white;
 }
 #info > h2{
