--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -28,7 +28,7 @@ html{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     color: white;
 }
 #landing > img{
@@ -41,7 +41,7 @@ html{
 }
 h1{
     font-size: 24px;
-    margin-bottom: 2%;
+    margin-bottom: 1%;
 }
 #landing > h2{
     font-size: 16px;
@@ -50,7 +50,7 @@ h1{
 }
 #landing > i{
     font-size: 32px;
-    margin: 5% 0px;
+    margin: 2% 0px;
 }
 
 
