--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -18,17 +18,22 @@ html{
     background-color: #57326b;
     overflow: hidden;
 }
-#landing{
+body{
     background-image: url('../img/fondo1.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     height: 100vh;
     width: 100vw;
+}
+#landing{
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    position: relative;
+    top: 10%;
     color: white;
 }
 #landing > img{
