--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -59,7 +59,7 @@ h1{
 }
 /* CRÉDITOS */
 #info{
-    position: absolute;
+    position: relative;
     bottom: 0;
     right: 0;
     margin: 15px 25px;
