--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -18,26 +18,21 @@ html{
     background-color: #57326b;
     overflow: hidden;
 }
-body{
+#landing{
     background-image: url('../img/fondo1.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     height: 100vh;
     width: 100vw;
-}
-#landing{
-    height: 100%;
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    top: 5%;
     color: white;
 }
 #landing > img{
-    height: 40%;
+    height: 35%;
+    margin-top: 5%;
 }
 #icons{
     color: rgb(194, 194, 194);
@@ -55,13 +50,13 @@ h1{
 }
 #landing > i{
     font-size: 32px;
-    margin: 2% 0px;
+    margin: 3% 0px;
 }
 /* CRÉDITOS */
 #info{
-    position: relative;
+    position: absolute;
     bottom: 0;
-    right: 0;
+    left: 0;
     margin: 15px 25px;
     color: white;
 }
