--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -16,6 +16,7 @@
 }
 html{
     background-color: #57326b;
+    overflow: hidden;
 }
 #landing{
     background-image: url('../img/fondo1.png');
@@ -30,32 +31,29 @@ html{
     color: white;
 }
 #landing > img{
-    height: 35%;
-    margin-top: 5%;
+    height: 35vh;
+    margin-top: 5vh;
 }
 #icons{
     color: rgb(194, 194, 194);
-    font-size: 36px;
-    margin-bottom: 5%;
+    font-size: 5vh;
+    margin-bottom: 3vh;
 }
 h1{
-    font-size: 24px;
-    margin-bottom: 1%;
+    font-size: 3vh;
+    margin-bottom: 1vh;
 }
 #landing > h2{
-    font-size: 16px;
-    width: 80%;
+    font-size: 2vh;
+    width: 90%;
     color: rgb(194, 194, 194);
 }
 #landing > i{
-    font-size: 32px;
-    margin: 3% 0px;
+    font-size: 5vh;
+    margin: 1vh 0px;
 }
 /* CRÉDITOS */
 #info{
-    position: absolute;
-    bottom: 0;
-    left: 0;
     margin: 15px 25px;
     color: white;
 }
