--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -12,6 +12,10 @@
         <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
         <meta name="description" content="Save the King Game disponible para PC y Mac">
+
+        <script>
+            screen.orientation.lock('portrait');
+        </script>
     </head>
 
     <body>
