--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -15,24 +15,22 @@
     text-align: center;
 }
 html{
-    width: 100vw;
-    height: 100vh;
     background-color: #57326b;
+}
+#landing{
     background-image: url('../img/fondo1.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-#landing{
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: white;
 }
 #landing > img{
+    margin-top: 5vh;
     height: 35vh;
 }
 #icons{
