--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Save The King</title>
-        <link rel="icon" type="image/x-icon" href="media/img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
 
         <link href="resources/css/mobileStyles.css" type="text/css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
