--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <title>Save The King</title>
+    <link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
+    
+    <link href="resources/css/menuStyles.css" type="text/css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
-        <meta name="description" content="">
-    </head>
+    <meta name="description" content="Save the King Game">
+</head>
 
-    <body>
-        <h1>DESKTOP</h1>
-    </body>
+<body>
+    <div id="landing">
+        <img src="resources/img/logoFinal.png" alt="Logo Save The King">
+
+        <a id="jugar" href="lobby.html"><img src="resources/img/playButton.png" alt="Jugar"></a>
+    </div>
+    
+    <div id="mute">
+        <a id="sound" onclick="someFunction()"><i class="fa-solid fa-volume-high"></i></a>
+        <a id="silence" onclick="someFunction()"><i class="fa-solid fa-volume-xmark"></i></a>
+    </div>
+    
+    <div id="info">
+        <h2>DESARROLLADO POR</h2>
+        <h2>JAVIER IREGUI</h2>
+        <h2>FÉLIX HERNÁNDEZ</h2>
+    </div>
+
+    <a id="instaLink" href="https://www.instagram.com/savetheking_game/">
+        <i id="insta" class="fa-brands fa-instagram"></i>
+    </a>
+    
+</body>
+
 </html>
