--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     <div id="landing">
         <img src="resources/img/logoFinal.png" alt="Logo Save The King">
 
-        <a id="jugar" href="lobby.html"><img src="resources/img/playButton.png" alt="Jugar"></a>
+        <a id="jugar" href="/lobby"><img src="resources/img/playButton.png" alt="Jugar"></a>
     </div>
     
     <div id="mute">
