--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Save The King | Lobby</title>
-    <link rel="icon" type="image/x-icon" href="media/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="resources/img/favicon.ico">
     
     <link href="resources/css/menuStyles.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
