--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -15,6 +15,16 @@
     <meta name="description" content="Save the King Game">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RMMTEWMLY2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RMMTEWMLY2');
+</script>
+
 <body>
     <div id="lobby">
         <img id="logo" src="resources/img/logoFinal.png" alt="Logo Save The King">
@@ -34,11 +44,11 @@
         <a id="silence" onclick="someFunction()"><i class="fa-solid fa-volume-xmark"></i></a>
     </div>
 
-    <a id="backLink" href="index.html">
+    <a id="backLink" href="/">
         <i id="back" class="fa-solid fa-arrow-left"></i>
     </a>
     
-    <a id="helpLink" href="tutorial.html">
+    <a id="helpLink" href="/tutorial">
         <i id="help" class="fa-solid fa-circle-question"></i>
     </a>
 </body>
