--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -14,6 +14,16 @@
         <meta name="description" content="Save the King Game disponible para PC y Mac">
     </head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RMMTEWMLY2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-RMMTEWMLY2');
+    </script>
+
     <body>
         <div id="landing">
             <img src="resources/img/logoFinal.png" alt="Logo Save The King" height="200px">
