--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -43,7 +43,7 @@ h1{
     margin-bottom: 1vh;
 }
 #landing > h2{
-    font-size: 2vh;
+    font-size: 12px;
     width: 85%;
     color: rgb(194, 194, 194);
 }
