--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,9 +27,9 @@
 
 <body>
     <div id="landing">
-        <img src="resources/img/logoFinal.png" alt="Logo Save The King">
+        <img src="resources/img/logoFinal.webp" alt="Logo Save The King">
 
-        <a id="jugar" href="/lobby"><img src="resources/img/playButton.png" alt="Jugar"></a>
+        <a id="jugar" href="/lobby"><img src="resources/img/playButton.webp" alt="Jugar"></a>
     </div>
     
     <div id="mute">
