--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -27,7 +27,7 @@
 
 <body>
     <div id="lobby">
-        <img id="logo" src="resources/img/logoFinal.png" alt="Logo Save The King">
+        <img id="logo" src="resources/img/logoFinal.webp" alt="Logo Save The King">
 
         <div id="scroll">
             <a id="buscar" href="publica.html">BUSCAR SALA</a>
