--- a/public/css/menuStyles.css
+++ b/public/css/menuStyles.css
@@ -63,7 +63,7 @@ html{
 
 /* LOGO */
 #landing{
-    background-image: url('../img/fondo1.png');
+    background-image: url('../img/fondo1.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
