--- a/public/css/mobileStyles.css
+++ b/public/css/mobileStyles.css
@@ -18,7 +18,7 @@ html{
     background-color: #57326b;
 }
 #landing{
-    background-image: url('../img/fondo1.png');
+    background-image: url('../img/fondo1.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
