--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -26,7 +26,7 @@
 
     <body>
         <div id="landing">
-            <img src="resources/img/logoFinal.webp" alt="Logo Save The King" height="200px">
+            <img src="resources/img/logoFinal.webp" alt="Logo Save The King" width="247px" height="200px">
 
             <div id="icons">
                 <i class="fa-solid fa-mobile-screen-button"></i>
