--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -12,21 +12,11 @@
         <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
         <meta name="description" content="Save the King Game disponible para PC y Mac">
-
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-RMMTEWMLY2"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'G-RMMTEWMLY2');
-        </script>
     </head>
 
     <body>
         <div id="landing">
-            <img src="resources/img/logoFinal.webp" alt="Logo Save The King" width="247px" height="200px">
+            <img src="resources/img/logoFinal.webp" alt="Logo Save The King" height="200px">
 
             <div id="icons">
                 <i class="fa-solid fa-mobile-screen-button"></i>
