--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -16,7 +16,7 @@
 
     <body>
         <div id="landing">
-            <img src="resources/img/logoFinal.webp" alt="Logo Save The King" height="200px">
+            <img src="resources/img/logoFinal.webp" alt="Logo Save The King" width="43vh" height="35vh">
 
             <div id="icons">
                 <i class="fa-solid fa-mobile-screen-button"></i>
