--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -13,16 +13,6 @@
     <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
     <meta name="description" content="Save the King Game">
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RMMTEWMLY2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-RMMTEWMLY2');
-    </script>
 </head>
 
 <body>
@@ -30,11 +20,6 @@
         <img src="resources/img/logoFinal.webp" alt="Logo Save The King">
 
         <a id="jugar" href="/lobby"><img src="resources/img/playButton.webp" alt="Jugar"></a>
-    </div>
-    
-    <div id="mute">
-        <a id="sound" onclick="someFunction()"><i class="fa-solid fa-volume-high"></i></a>
-        <a id="silence" onclick="someFunction()"><i class="fa-solid fa-volume-xmark"></i></a>
     </div>
     
     <div id="info">
