--- a/public/css/menuStyles.css
+++ b/public/css/menuStyles.css
@@ -131,7 +131,7 @@ html{
 
 /* CONTENIDO */
 #lobby{
-    background-image: url('../media/img/fondo1.png');
+    background-image: url('../img/fondo1.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
