--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
     <link href="resources/css/menuStyles.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
+    <script src="resources/js/transitionColor.js"></script>
+
     <meta name="description" content="Save the King Game">
 </head>
 
@@ -32,6 +34,7 @@
         <i id="insta" class="fa-brands fa-instagram"></i>
     </a>
     
+    <div id="transition"></div>
 </body>
 
 </html>
