--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -11,6 +11,8 @@
     <link href="resources/css/menuStyles.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
+    <script src="resources/js/transitionColor.js"></script>
+
     <meta name="description" content="Save the King Game">
 </head>
 
@@ -40,6 +42,8 @@
     <a id="helpLink" href="/tutorial">
         <i id="help" class="fa-solid fa-circle-question"></i>
     </a>
+
+    <div id="transition"></div>
 </body>
 
 </html>
