--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +10,6 @@
     
     <link href="resources/css/menuStyles.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
-
-    <script src="resources/js/transitionColor.js"></script>
 
     <meta name="description" content="Save the King Game">
 </head>
@@ -34,7 +31,7 @@
         <i id="insta" class="fa-brands fa-instagram"></i>
     </a>
     
-    <div id="transition"></div>
+    <div id="transition" style="background-color: #fdea18;"></div>
 </body>
 
 </html>
