--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -11,8 +11,6 @@
     <link href="resources/css/menuStyles.css" type="text/css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
-    <script src="resources/js/transitionColor.js"></script>
-
     <meta name="description" content="Save the King Game">
 </head>
 
@@ -43,7 +41,7 @@
         <i id="help" class="fa-solid fa-circle-question"></i>
     </a>
 
-    <div id="transition"></div>
+    <div id="transition" style="background-color: #fdea18;"></div>
 </body>
 
 </html>
