--- a/views/mobile.ejs
+++ b/views/mobile.ejs
@@ -11,8 +11,6 @@
         <link href="resources/css/mobileStyles.css" type="text/css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/06ddcb88ee.js" crossorigin="anonymous"></script>
 
-        <script src="resources/js/transitionColor.js"></script>
-
         <meta name="description" content="Save the King Game disponible para PC y Mac">
     </head>
 
@@ -36,6 +34,6 @@
             </a>
         </div>
         
-        <div id="transition"></div>
+        <div id="transition" style="background-color: #fdea18;"></div>
     </body>
 </html>
