--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
         <i id="insta" class="fa-brands fa-instagram"></i>
     </a>
     
-    <div id="transition" style="background-color: #fdea18;"></div>
+    <div id="indexTransition" style="background-color: #fdea18;"></div>
 </body>
 
 </html>
