--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -41,7 +41,7 @@
         <i id="help" class="fa-solid fa-circle-question"></i>
     </a>
 
-    <div id="transition" style="background-color: #fdea18;"></div>
+    <div id="lobbyTransition" style="background-color: #fdea18;"></div>
 </body>
 
 </html>
