Comenzando Funciones Servidor

--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -19,7 +19,7 @@
         <img id="logo" src="resources/img/logoFinal.webp" alt="Logo Save The King">
 
         <div id="scroll">
-            <a id="buscar" href="publica.html">BUSCAR SALA</a>
+            <a id="buscar" href="/sala">BUSCAR SALA</a>
             <a id="crear" href="publica.html">CREAR SALA</a>
             <form action="">
                 <input type="text" id="roomCode" name="roomCode" placeholder="CÓDIGO">
