Creando funciones de Sala

--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -19,9 +19,9 @@
         <img id="logo" src="resources/img/logoFinal.webp" alt="Logo Save The King">
 
         <div id="scroll">
-            <a id="buscar" href="/sala">BUSCAR SALA</a>
-            <a id="crear" href="publica.html">CREAR SALA</a>
-            <form action="">
+            <a id="buscar" href="/buscarSala">BUSCAR SALA</a>
+            <a id="crear" href="/crearSala">CREAR SALA</a>
+            <form action="/joinRoom" method="POST">
                 <input type="text" id="roomCode" name="roomCode" placeholder="CÓDIGO">
                 <input type="submit" id="unirse" value="UNIRSE">
             </form> 
