--- a/views/crearSala.ejs
+++ b/views/crearSala.ejs
@@ -72,7 +72,7 @@
         <div id="silence" onclick="unmute()"><i class="fa-solid fa-volume-xmark"></i></div>
     </div>
 
-    <a id="backLink" onclick="saveMusic()" href="/">
+    <a id="backLink" onclick="saveMusic()" href="/lobby">
         <i id="back" class="fa-solid fa-arrow-left"></i>
     </a>
     
