--- a/public/css/roomStyles.css
+++ b/public/css/roomStyles.css
@@ -61,15 +61,15 @@ html{
     100% {transform: translateX(100%)}
 }
 #cSalaTransition{
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background-color: white;
-    animation-name: transitionLeft;
-    animation-duration: 1.5s;
-    transform: translateX(-100%);
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: white;
+  animation-name: transitionLeft;
+  animation-duration: 1.5s;
+  transform: translateX(-100%);
 }
 
 /* ------------------------------------------------------------------------------------------------------------------ */
@@ -78,33 +78,20 @@ html{
 
 /* CONTENIDO */
 #crearSala{
-    background-image: url('../img/fondo2.webp');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-image: url('../img/fondo2.webp');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #logo{
     margin-top: 5vh;
     height: 25%;
 }
-
-#scroll{
-    height: 60%;
-    width: 75%;
-    background-color: #1a1a1a7c;
-    border-radius: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: scroll;
-}
-
 /* BOTÓN ATRAS */
 #backLink{
     position: absolute;
@@ -122,77 +109,69 @@ html{
     font-size: 48px;
 }
 
-
-.slider-wrapper {
-    margin: 1rem;
-    position: relative;
+#slider{
+    width: 60%;
+    height: 60%;
     overflow: hidden;
-  }
-  
-  .slides-container {
-    height: calc(100vh - 2rem);
-    width: 100%;
-    display: flex;
-    overflow: scroll;
+}
+#slides{
+    overflow: hidden;
     scroll-behavior: smooth;
     list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .slide-arrow {
-    position: absolute;
     display: flex;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    height: 4rem;
-    background-color: white;
-    border: none;
-    width: 2rem;
-    font-size: 3rem;
-    padding: 0;
-    cursor: pointer;
-    opacity: 0.5;
-    transition: opacity 100ms;
-  }
-  
-  .slide-arrow:hover,
-  .slide-arrow:focus {
-    opacity: 1;
-  }
-  
-  #slide-arrow-prev {
-    left: 0;
-    padding-left: 0.25rem;
-    border-radius: 0 2rem 2rem 0;
-  }
-  
-  #slide-arrow-next {
-    right: 0;
-    padding-left: 0.75rem;
-    border-radius: 2rem 0 0 2rem;
-  }
-  
-  .slide {
+    flex-direction: row;
     width: 100%;
     height: 100%;
-    flex: 1 0 100%;
-  }
-  
-  .slide:nth-child(1) {
+    background-color: rgba(48, 48, 48, 0.616);
+    border-radius: 50px;
+}
+.slide {
+    border-radius: 25px;
+    margin: 5% 5%;
+    flex: 1 0 90%;
+}
+.slide:nth-child(1) {
     background-color: #49b293;
-  }
-  
-  .slide:nth-child(2) {
+}
+.slide:nth-child(2) {
     background-color: #b03532;
-  }
-  
-  .slide:nth-child(3) {
+}
+.slide:nth-child(3) {
     background-color: #6a478f;
-    margin: 0;
-  }
-  
-  .slide:nth-child(4) {
+}
+.slide:nth-child(4) {
     background-color: #da6f2b;
-  }
+}
+.arrow {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    height: fit-content;
+    background-color: transparent;
+    font-size: 50px;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: .2s;
+}
+.arrow:hover {
+    font-size: 70px;
+}
+#arrow-prev {
+    left: 15%;
+} 
+#arrow-prev:hover {
+    left: 12%;
+    padding-right: 25px;
+} 
+#arrow-next {
+    right: 15%;
+}
+#arrow-next:hover {
+    right: 12%;
+    padding-left: 25px;
+} 
