--- a/views/crearSala.ejs
+++ b/views/crearSala.ejs
@@ -53,10 +53,36 @@
 
         <div id="slider">
             <ul id="slides">
-                <li class="slide"><h1>1</h1></li>
-                <li class="slide"><h1>2</h1></li>
-                <li class="slide"><h1>3</h1></li>
-                <li class="slide"><h1>4</h1></li>
+                <li class="slide">
+                    <div class="desc">
+                        <h2>CIUDAD</h2>
+                        <p>
+                            El clásico! <br> <br> Luchad en amplias zonas abiertas de la ciudad repletas de obstáculos y zonas de escondite.
+                        </p>
+                        <a class="select" href="crearSala/ciudad">SELECCIONAR</a>
+                    </div>
+                    <img src="" alt="">
+                </li>
+                <li class="slide">
+                    <div class="desc">
+                        <h2>MANSIÓN</h2>
+                        <p>
+                            Para una batalla más sigilosa... <br> <br> Esta gran mansión cuenta con pasillos y habitaciones en los que esconderse. Sin una buena estrategia pronto estaréis acorralados.
+                        </p>
+                        <a class="select" href="crearSala/mansion">SELECCIONAR</a>
+                    </div>
+                    <img src="" alt="">
+                </li>
+                <li class="slide">
+                    <div class="desc">
+                        <h2>WILD WEST</h2>
+                        <p>
+                            Combate directo! <br> <br> En este pequeño mapa hay poca escapatoria. Será más fácil encontrar a los enemigos pero nadie estará a salvo...
+                        </p>
+                        <a class="select" href="crearSala/wildWest">SELECCIONAR</a>
+                    </div>
+                    <img src="" alt="">
+                </li>
             </ul>
         </div>
 
