--- a/views/crearSala.ejs
+++ b/views/crearSala.ejs
@@ -59,7 +59,7 @@
                         <p>
                             El clásico! <br> <br> Luchad en amplias zonas abiertas de la ciudad repletas de obstáculos y zonas de escondite.
                         </p>
-                        <a class="select" href="crearSala/ciudad">SELECCIONAR</a>
+                        <a class="select" onclick="saveMusic()" href="crearSala/ciudad">SELECCIONAR</a>
                     </div>
                     <img src="" alt="">
                 </li>
@@ -69,7 +69,7 @@
                         <p>
                             Para una batalla más sigilosa... <br> <br> Esta gran mansión cuenta con pasillos y habitaciones en los que esconderse. Sin una buena estrategia pronto estaréis acorralados.
                         </p>
-                        <a class="select" href="crearSala/mansion">SELECCIONAR</a>
+                        <a class="select" onclick="saveMusic()" href="crearSala/mansion">SELECCIONAR</a>
                     </div>
                     <img src="" alt="">
                 </li>
@@ -79,7 +79,7 @@
                         <p>
                             Combate directo! <br> <br> En este pequeño mapa hay poca escapatoria. Será más fácil encontrar a los enemigos pero nadie estará a salvo...
                         </p>
-                        <a class="select" href="crearSala/wildWest">SELECCIONAR</a>
+                        <a class="select" onclick="saveMusic()" href="crearSala/wildWest">SELECCIONAR</a>
                     </div>
                     <img src="" alt="">
                 </li>
